--- a/javascript_projeto_de_vida/style.css
+++ b/javascript_projeto_de_vida/style.css
@@ -27,3 +27,16 @@ body {
         margin:  0 auto;
 
     }
+
+    .titulo-principal{
+        text-align: left;
+        width: 100%;
+        font-size: 32px;
+        
+    
+    }
+    .titulo-principal span{
+        color: var(--verde);
+    }
+
+
