--- a/javascript_projeto_de_vida/style.css
+++ b/javascript_projeto_de_vida/style.css
@@ -39,4 +39,15 @@ body {
         color: var(--verde);
     }
 
+    .botao{
+        font-family: "crakra petch", sans-serif;
+        background-color: var(--botao-inativo);
+        color: var(--branco);
+        display: flex;
+        justify-content: center;
+        padding: 1em;
+        
+        
+    }
+
 
