--- a/javascript_projeto_de_vida/style.css
+++ b/javascript_projeto_de_vida/style.css
@@ -46,8 +46,11 @@ body {
         display: flex;
         justify-content: center;
         padding: 1em;
-        
-        
+        font-size: 18px;
+        align-items: center;
+        width: 100%;
+        border-bottom: 4px solid;
+
     }
 
 
