--- a/javascript_projeto_de_vida/style.css
+++ b/javascript_projeto_de_vida/style.css
@@ -39,8 +39,8 @@ body {
         color: var(--verde);
     }
 
-    .botao{
-        font-family: "crakra petch", sans-serif;
+    .botoes {
+        font-family: "Crakra Petch", sans-serif;
         background-color: var(--botao-inativo);
         color: var(--branco);
         display: flex;
@@ -49,8 +49,37 @@ body {
         font-size: 18px;
         align-items: center;
         width: 100%;
-        border-bottom: 4px solid;
-
+        border-bottom: 4px solid var(--botao-ativo);
+        border-left: 2px solid var(--botao-ativo);
+        border-right: 2px solid var(--botao-ativo);
+        border-top: none;
     }
 
+    .botoes {
+        display: block;
+    }
+    
+    @media screen and (min-width: 768px) {
+        .botoes {
+            display: flex;
+        }
+    }
+    .botao:first-child {
+        border-radius: 40px 40px 0 0;
+    }
+    @media screen and (min-width: 768px) {
+        .botoes {
+            display: flex;
+        }
+    
+        .botao:first-child {
+            border-radius: 40px 0 0 0;
+        }
+    
+        .botao:last-child {
+            border-radius: 0 40px 0 0;
+        }
+    }
+    
+    
 
