--- a/javascript_projeto_de_vida/style.css
+++ b/javascript_projeto_de_vida/style.css
@@ -57,6 +57,12 @@ body {
 
     .botoes {
         display: block;
+
+    }
+
+    .ativo{
+        background-color: var(--botao-ativo);
+        border-bottom: 4px solid var(--verde);
     }
     
     @media screen and (min-width: 768px) {
